Рабочее удаление и добавление Dim и Meas. Осталось приделать загрузку полей из БД

--- a/OLAP/Views/Home/Manage.cshtml
+++ b/OLAP/Views/Home/Manage.cshtml
@@ -84,6 +84,7 @@
         }
         else {
             $("#newDimBaseName").val($("#SelDB option:selected").val());
+            $("#newMeasBaseName").val($("#SelDB option:selected").val());
             $("#delDB").removeClass("disabled");
             $("#addDim").removeClass("disabled");
         }
