--- a/OLAP/Views/Home/ShowDimensions.cshtml
+++ b/OLAP/Views/Home/ShowDimensions.cshtml
@@ -1,6 +1,6 @@
 ﻿    <div class="navbar">
         <div class="navbar-inner">
-            <span class="brand">Измерения</span>
+            <span id="DimSelLabel">Измерения</span>
             <div class="columnButtons">
                 <a href="#addNewDimension" id="addDim" role="button" class="btn btn-success disabled" data-toggle="modal">Добавить...</a>
                 <a href="#" id="delDim" role="button" class="btn btn-danger disabled">Удалить</a>
