--- a/OLAP/Views/Home/ShowDimensions.cshtml
+++ b/OLAP/Views/Home/ShowDimensions.cshtml
@@ -8,7 +8,7 @@
         </div>
     </div>
 
-    <div class="modal hide" id="addNewDimension" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal hide" id="addNewDimension" tabindex="-1" style="z-index: 5002" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
         <div class="modal-header">
             <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
             <h3 id="myModalLabel">Добавить измерение</h3>
