--- a/OLAP/Content/Site.css
+++ b/OLAP/Content/Site.css
@@ -119,55 +119,54 @@ canvas {
     min-height: 500px;
 }
 
-#left {
+#left
+{
     position: absolute;
     min-height: 485px;
     max-height: 485px;
     left: 15px;
+    width: 49%;
     top: 77px;
     bottom: 15px;
-    /*width: 23%;*/
+}
+
+#right
+{
+    position: absolute;
+    top: 77px;
+    bottom: 15px;
+    margin-right: 15px;
+    left: 51%;
+    width: 48%;
+    min-height: 485px;
+    max-height: 485px;
+}
+
+#left1 {
+    position: absolute;
+    min-height: 485px;
+    max-height: 485px;
+    width: 49%;
     min-width: 322px;
     /*background-color: rgb(204,204,204)*/
 }
 
-#center {
+#left2 {
     position: absolute;
-    top: 77px;
-    bottom: 15px;
-    /*width: 32%;*/
-    left: 352px;
-    right: 677px;
     min-height: 485px;
     max-height: 485px;
     min-width: 322px;
-    max-width: 322px;
+    left: 51%;
+    width: 49%;
     /*background-color: rgb(204,204,204)*/
 }
-
-/*#right {
-    position: absolute;
-    min-height: 485px;
-    max-height: 485px;
-    /*width: 23%;
-    right: 15px;
-    top: 77px;
-    bottom: 15px;
-    min-width: 667px;
-    /*background-color: rgb(204,204,204)
-}*/
 
 #right1 {
-     display: block;
     position: absolute;
     min-height: 485px;
     max-height: 485px;
-    left: 689px;
-    right: 352px;
-    top: 77px;
-    bottom: 15px;
     min-width: 322px;
-    max-width: 322px;
+    width: 49%;
     /*background-color: rgb(204,204,204)*/
 }
 
@@ -175,11 +174,8 @@ canvas {
     position: absolute;
     min-height: 485px;
     max-height: 485px;
-    min-width: 322px;
-    /*width: 23%;*/
-    right: 15px;
-    top: 77px;
-    bottom: 15px;
+    width: 49%;
+    left: 51%;
     /*background-color: rgb(204,204,204)*/
 }
 
